--- a/KeyUnlock/platformio.ini
+++ b/KeyUnlock/platformio.ini
@@ -13,3 +13,6 @@ platform = atmelavr
 board = uno
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
+lib_deps = 
+	paulstoffregen/MsTimer2@^1.1
+	arduino-libraries/Servo@^1.1.8
